[package]
name = "uno_game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_uno_game = { git = "https://github.com/NateNoNameSOFT/lib_uno_game", branch = "main" }

bincode = "1.3.3"
colored = "2.0.0"
serde = "1.0.144"
serde_derive = "1.0.144"
